[package]
name = "brainpurr"
version = "0.1.0"
edition = "2024"
description = "brainpurr interpreter"
repository = "https://github.com/pommeJedusor/brainpurr"
license-file = "LICENSE"
license = "MIT"
keywords = ["cli", "brainpurr", "brainfuck"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
